--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,10 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="author" content="Tiago Alves de Farias (@phewrys)">
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Layout desenvolvido no teste da SBTUR (Viajar Faz Bem)."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -25,7 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>SBTUR - Tiago Alves</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
